fix: proper alignment for navbar links (#822)

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -130,17 +130,10 @@ html {
     margin: 0 auto;
   }
 
-  &__item {
-    // use margin instead of padding so that the border-bottom
-    // on active looks better
-    padding: 0;
-    margin: var(--ifm-navbar-item-padding-vertical)
-      var(--ifm-navbar-item-padding-horizontal);
-  }
-
   &__link {
     font-weight: var(--ifm-font-weight-normal);
     border-bottom: 2px solid transparent;
+    margin-bottom: -2px;
 
     &--active {
       color: var(--electron-color-light);
